@@ -6,7 +6,7 @@
 # Provides:          pommed
 # Required-Start:    $syslog $local_fs
 # Required-Stop:     $syslog $local_fs
-# Should-Start:      
+# Should-Start:      dbus
 # Should-Stop:       
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
